# steam-platform-stats

./: LICENSE  README.md  flake.nix  interactive.webm  main.py  pyproject.toml  requirements.txt  steam.py  utils.py
src/steam_platform_stats/: config.py  interactive.sh  main.py  models.py  steam_utils.py  utils.py  views.py
steam_platform_stats/: __init__.py  config.py  interactive.sh  main.py  models.py  steam_utils.py  utils.py  views.py
