[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-platform-stats"
version = "0.1.0"
description = "A tool to display user's Steam games statistics by platform"
authors = [
    { name="Ivan Batrakov", email="blackfan321@gmail.com" }
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
        "certifi==2024.12.14",
        "charset-normalizer==3.4.1",
        "idna==3.10",
        "markdown-it-py==3.0.0",
        "mdurl==0.1.2",
        "prettytable==3.12.0",
        "Pygments==2.19.1",
        "python-dotenv==1.0.1",
        "requests==2.32.3",
        "rich==13.9.4",
        "urllib3==2.3.0",
        "wcwidth==0.2.13",
        "argcomplete==3.5.3"
]

[project.scripts]
steam-platform-stats = "steam_platform_stats.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]